fix(css): avoid content resizing due to overflow

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -9,11 +9,16 @@
 
 html,
 body {
-	font-family: -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell,
-		Helvetica Neue;
+	font-family: -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu,
+		Cantarell, Helvetica Neue;
 	font-size: 16px;
 	background: var(--background);
 	color: var(--text);
+	/* Avoid content resizing when the scrollbar is shown */
+	width: calc(100vw - 20px);
+	padding-left: 20px;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 body {
